# python-foxess

./: .gitignore  README.md  pyproject.toml
examples/mqtt/: main.py  pyproject.toml
foxess/: __init__.py  client.py  inverter.py
